fix(Masthead): set overflow-x to visible so dropdown becomes visible

--- a/packages/styles/scss/components/masthead/_masthead-search.scss
+++ b/packages/styles/scss/components/masthead/_masthead-search.scss
@@ -92,7 +92,7 @@
 
   .#{$prefix}--header__search:not(.#{$prefix}--masthead__header--search-active) {
     @include carbon--breakpoint(md) {
-      overflow-x: auto;
+      overflow-x: visible;
     }
   }
 
