--- a/packages/styles/scss/components/masthead/_masthead.scss
+++ b/packages/styles/scss/components/masthead/_masthead.scss
@@ -18,6 +18,8 @@ $search-transition-timing: 95ms;
 /// @access private
 @mixin masthead-logo {
   height: 100%;
+  z-index: 1;
+  background-color: $ui-background;
 
   a {
     display: flex;
@@ -229,7 +231,7 @@ $search-transition-timing: 95ms;
 
   .#{$prefix}--header__nav-container {
     height: 100%;
-    overflow-x: hidden;
+    overflow-x: visible;
     position: relative;
     @include carbon--breakpoint(md) {
       display: flex;
@@ -292,6 +294,7 @@ $search-transition-timing: 95ms;
   }
   .#{$prefix}--header__action {
     border: 2px solid transparent;
+    background-color: $ui-background;
     > {
       svg {
         position: relative;
